Fix [ #315903 ] Date picker inside datatable: gets clipped if shows at the bottom of the datatable

--- a/src/resources-packaged/xbl/orbeon/datatable/datatable.css
+++ b/src/resources-packaged/xbl/orbeon/datatable/datatable.css
@@ -64,7 +64,26 @@
     vertical-align: middle !important;
 }
 
-/* Prevents part of a date picker from still showing when the date picker is closed. The date picker is hidden with
-   visibility: hidden, but the datatable sets a visibility: visible on the tr inside the datatable, which applies
-   to parts of the date picker and prevents it from being completely hidden. */
+/**
+ * Prevents part of a date picker from still showing when the date picker is closed
+ *
+ * The date picker is hidden with  visibility: hidden, but the datatable sets a visibility: visible on the tr inside
+ * the datatable, which applies to parts of the date picker and prevents it from being completely hidden, as
+ * visibility: hidden can be overridden by a descendant [1].
+ *
+ * [1] http://wiki.orbeon.com/forms/doc/contributor-guide/browser#TOC-Visibility:-hidden-can-be-overridde
+ */
 .yui-dt-scrollable .yui-dt-hd .yui-calcontainer thead tr { visibility: inherit }
+
+/**
+ * Allows the date picker not to be clipped by the datatable
+ *
+ * The datatable defined a rule: .yui-dt-scrollable .yui-dt-hd { position:relative }. As a result, it clips the date
+ * picker [1]. According to a comment in YUI's CSS, this rule is added to get around an IE bug where relatively
+ * positioned content inside the datatable doesn't scroll and shows as fixed [2]. However we haven't this problem
+ * and for now are overriding YUI's workaround so the date picker doesn't get clipped when inside the datatable.
+ *
+ * [1] http://wiki.orbeon.com/forms/doc/contributor-guide/browser#TOC-Absolutely-positioned-box-inside-a-1
+ * [2] http://rowanw.com/bugs/overflow_relative.htm
+ */
+.xbl-fr-datatable .yui-dt-scrollable .yui-dt-hd { position: static }
